# mcp-gdocs

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.json  smithery.yaml
docs/: development-plan.xml  knowledge-graph.xml
src/mcp_gdocs/: __init__.py  auth.py  converter.py  gdrive.py  server.py
